--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,27 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "effector": "^22.5.0",
-    "effector-react": "^22.4.0",
+    "effector": "22.5.0",
+    "effector-react": "22.4.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
-    "prettier": "2.8.2",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "cssnano": "^5.1.14",
+    "identity-obj-proxy": "^3.0.0",
+    "postcss-advanced-variables": "3.0.1",
+    "postcss-import": "15.1.0",
+    "postcss-inline-svg": "5.0.0",
+    "postcss-preset-env": "7.8.3",
+    "prettier": "2.8.2",
     "typescript": "4.9.4"
   },
   "prettier": {
